# cli_s3_uploader

./: README.md  pyproject.toml  requirements.txt  setup.py
cli_s3_uploader/: s3_uploader.py
tests/: __init__.py  test_s3_uploader.py
